[gd_scene format=3 uid="uid://dp6o15xpe0646"]

[ext_resource type="Script" uid="uid://0xfv4oqy028d" path="res://Scenes/QuartoVerao/QuartoVerao.gd" id="1_6d1t3"]
[ext_resource type="PackedScene" uid="uid://db1dqsavnoda7" path="res://Scenes/Personagem/Personagem.tscn" id="1_7q7q3"]
[ext_resource type="PackedScene" uid="uid://ddpb7muitv5sm" path="res://Assets/Abajur/Abajur.blend" id="3_6wwey"]
[ext_resource type="PackedScene" uid="uid://dmxe1vqjq832j" path="res://Assets/Cadeira Gamer/Cadeira Gamer colorido.glb" id="3_oq3mb"]
[ext_resource type="PackedScene" uid="uid://7hft04d4k5f6" path="res://Assets/Cabeceira e Cama/Cabeceira e Cama.blend" id="5_ouqb2"]
[ext_resource type="PackedScene" uid="uid://doudba0quumuo" path="res://Assets/Geladeira/Geladeira.blend" id="6_vmc43"]
[ext_resource type="PackedScene" uid="uid://mgddkmxq8lwd" path="res://Assets/Armario de Roupa/Armario de Roupa.blend" id="6_xk6e0"]
[ext_resource type="PackedScene" uid="uid://b5f7liekcuf6n" path="res://Assets/Sofa/Sofa.blend" id="7_qko4a"]
[ext_resource type="PackedScene" uid="uid://51gycbjbsn68" path="res://Assets/Maquina de Roupa/Lava-roupa.blend" id="7_yfhgd"]
[ext_resource type="PackedScene" uid="uid://cuc1p3s5mffi1" path="res://Assets/Pia/Pia.blend" id="8_3gews"]
[ext_resource type="PackedScene" uid="uid://btkvw1bvu8ugb" path="res://Assets/Banco/Banco.blend" id="8_qko4a"]
[ext_resource type="PackedScene" uid="uid://cgjp6n6106qqk" path="res://Assets/Fogao/Fogao.blend" id="9_qko4a"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_33f23"]
sky_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)
ground_horizon_color = Color(0.66224277, 0.6717428, 0.6867428, 1)

[sub_resource type="Sky" id="Sky_6d1t3"]
sky_material = SubResource("ProceduralSkyMaterial_33f23")

[sub_resource type="Environment" id="Environment_6wwey"]
background_mode = 2
sky = SubResource("Sky_6d1t3")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6d1t3"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ouqb2"]
albedo_color = Color(0.0035191667, 0.0035191681, 0.0035191672, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_qko4a"]
transparency = 1
blend_mode = 1
albedo_color = Color(1, 1, 1, 0.23137255)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_33f23"]
noise_type = 5
frequency = 0.1635

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_6d1t3"]
noise = SubResource("FastNoiseLite_33f23")
seamless = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6wwey"]
transparency = 1
albedo_texture = SubResource("NoiseTexture2D_6d1t3")
normal_enabled = true
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oq3mb"]
albedo_color = Color(0.22205421, 0.11881498, 0.038192652, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_6d1t3"]
size = Vector3(16.026855, 1, 16.474487)

[sub_resource type="BoxShape3D" id="BoxShape3D_xk6e0"]
size = Vector3(34.58191, 21.443848, 16.243774)

[sub_resource type="BoxShape3D" id="BoxShape3D_q14y7"]
size = Vector3(12.477112, 26.667114, 11.543335)

[sub_resource type="BoxShape3D" id="BoxShape3D_y6655"]
size = Vector3(37.125244, 32.08484, 52.646362)

[sub_resource type="BoxShape3D" id="BoxShape3D_ypl1b"]
size = Vector3(9.869385, 5.508667, 6.241455)

[sub_resource type="BoxShape3D" id="BoxShape3D_yvk0o"]
size = Vector3(1.5343018, 4.4873047, 2.9353027)

[sub_resource type="BoxShape3D" id="BoxShape3D_dtxsi"]
size = Vector3(14.453857, 10, 12.448975)

[sub_resource type="BoxShape3D" id="BoxShape3D_vvsrn"]
size = Vector3(1.3172989, 7.5077515, 1.3470459)

[sub_resource type="BoxShape3D" id="BoxShape3D_vmc43"]
size = Vector3(4.651367, 7.5022583, 3.3577576)

[sub_resource type="BoxShape3D" id="BoxShape3D_3gews"]
size = Vector3(11.852875, 2.4331055, 5.076538)

[sub_resource type="BoxShape3D" id="BoxShape3D_trdd2"]
size = Vector3(12.783417, 3.715393, 6.735962)

[sub_resource type="BoxShape3D" id="BoxShape3D_yfhgd"]
size = Vector3(4.8554535, 5.3606567, 4.725586)

[sub_resource type="BoxShape3D" id="BoxShape3D_l0lye"]
size = Vector3(3.3554688, 3.7038574, 3.1401062)

[sub_resource type="BoxShape3D" id="BoxShape3D_qko4a"]
size = Vector3(14.83078, 4.831543, 9.09668)

[sub_resource type="BoxShape3D" id="BoxShape3D_y7ql7"]
size = Vector3(1.496582, 8.495728, 5.0164795)

[node name="Node3D" type="Node3D" unique_id=1740440265]
script = ExtResource("1_6d1t3")

[node name="WorldEnvironment" type="WorldEnvironment" parent="." unique_id=1223002260]
environment = SubResource("Environment_6wwey")

[node name="Camera3D" type="Camera3D" parent="." unique_id=675466456]
transform = Transform3D(-0.012217023, -0.57353365, 0.8190909, 0, 0.81915206, 0.57357645, -0.9999254, 0.0070073972, -0.010007599, 35.774788, 27.27245, 3.1660748)
current = true
fov = 36.8

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." unique_id=1695156520]
transform = Transform3D(-0.8660254, -0.43301278, 0.25, 0, 0.49999997, 0.86602545, -0.50000006, 0.75, -0.43301266, 0, 0, 0)
shadow_enabled = true

[node name="CharacterBody3D" parent="." unique_id=1111050496 instance=ExtResource("1_7q7q3")]
transform = Transform3D(-4.371139e-08, -0.17364818, 0.9848077, 0, 0.9848077, 0.17364818, -1, 7.590403e-09, -4.304731e-08, -15.90328, 1.0624936, -2.0917006)
collision_priority = 2.0

[node name="C-S" type="CSGBox3D" parent="." unique_id=662865334]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2417564, 0, 3.8038483)
use_collision = true
size = Vector3(20.916351, 1, 40.050354)
material = SubResource("StandardMaterial3D_6d1t3")

[node name="C-Q" type="CSGBox3D" parent="." unique_id=427975516]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.725, 0, -2.565)
use_collision = true
size = Vector3(16.143692, 1, 16.501799)
material = SubResource("StandardMaterial3D_ouqb2")

[node name="C-B" type="CSGBox3D" parent="." unique_id=791185838]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.597, 0, 14.217)
size = Vector3(9.880615, 1, 12.884079)

[node name="P-S-E" type="CSGBox3D" parent="." unique_id=999183506]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 9.210637, 3.212112, 3.846405)
size = Vector3(0.068847656, 6.4263306, 39.964233)
material = SubResource("StandardMaterial3D_qko4a")

[node name="P-S-N" type="CSGBox3D" parent="." unique_id=14124546]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2519712, 3.2601848, -16.163532)
use_collision = true
collision_layer = 2
collision_mask = 3
size = Vector3(20.76242, 6.4263306, 0.13683319)
material = SubResource("StandardMaterial3D_6wwey")

[node name="P-S-W" type="CSGBox3D" parent="." unique_id=1479889664]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -11.531374, 3.2601848, 3.788147)
sorting_offset = -3.0
use_collision = true
collision_layer = 2
size = Vector3(0.35675633, 6.4263306, 39.964233)
material = SubResource("StandardMaterial3D_6wwey")

[node name="CSGBox3D" type="CSGBox3D" parent="P-S-W" unique_id=1232342871]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.29330826, 7.9878035)
size = Vector3(1, 4.791, 2.3297548)
material = SubResource("StandardMaterial3D_oq3mb")

[node name="CSGBox3D2" type="CSGBox3D" parent="P-S-W" unique_id=33403756]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.38717937, -6.7563696)
layers = 2
operation = 2
size = Vector3(1, 4.791321, 2.444336)

[node name="P-S-S" type="CSGBox3D" parent="." unique_id=245977431]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.2519712, 3.2601848, 23.727097)
use_collision = true
collision_layer = 2
collision_mask = 3
size = Vector3(20.76242, 6.4263306, 0.13683319)
material = SubResource("StandardMaterial3D_6wwey")

[node name="P-B-S" type="CSGBox3D" parent="." unique_id=226946826]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.59421, 3.2601848, 20.76507)
size = Vector3(9.876919, 6.4263306, 0.13683319)

[node name="P-B-N" type="CSGBox3D" parent="." unique_id=701803349]
transform = Transform3D(1, 0, 0, 0, 0.9999596, -0.008988325, 0, 0.008988325, 0.9999596, -16.589317, 3.2601848, 7.796811)
size = Vector3(9.886702, 6.4263306, 0.13683319)

[node name="P-B-W" type="CSGBox3D" parent="." unique_id=2071574001]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -21.496065, 3.2601848, 14.261192)
size = Vector3(0.073207855, 6.4263306, 13.144588)

[node name="P-Q-N" type="CSGBox3D" parent="." unique_id=287163223]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.691128, 3.2601848, -10.8365)
use_collision = true
collision_layer = 2
collision_mask = 3
size = Vector3(16.090324, 6.4263306, 0.13683319)

[node name="P-Q-S" type="CSGBox3D" parent="." unique_id=1487909852]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -19.691128, 3.2601848, 5.5961194)
use_collision = true
collision_layer = 2
collision_mask = 3
size = Vector3(16.090324, 6.4263306, 0.13683319)

[node name="P-B-W2" type="CSGBox3D" parent="." unique_id=1823053057]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -27.695524, 3.2601848, -2.6032581)
use_collision = true
collision_layer = 2
collision_mask = 3
size = Vector3(0.073207855, 6.4263306, 16.447395)

[node name="Area3D" type="Area3D" parent="." unique_id=2097811288]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20.83989, 1.2046435, -4.038749)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=816910825]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.1213379, 0, 1.4701538)
shape = SubResource("BoxShape3D_6d1t3")
debug_color = Color(0.96168846, 1.540184e-06, 0.51167804, 0.41960785)

[node name="T-B" type="CSGBox3D" parent="." unique_id=2138235047]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -16.597, 5.9760184, 14.217)
size = Vector3(9.880615, 1, 12.884079)

[node name="Cadeira Gamer colorido" parent="." unique_id=362056991 instance=ExtResource("3_oq3mb")]
transform = Transform3D(-5.2453664e-09, 0, -0.12, 0, 0.12, 0, 0.12, 0, -5.2453664e-09, -24.956905, 0, -4.58801)

[node name="StaticBody3D" type="StaticBody3D" parent="Cadeira Gamer colorido" unique_id=74630527]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cadeira Gamer colorido/StaticBody3D" unique_id=467477460]
transform = Transform3D(1, 0, -1.9575452e-12, 0, 1, 0, 1.9575452e-12, 0, 1, -0.017150879, 10.221924, 0.17951965)
shape = SubResource("BoxShape3D_xk6e0")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Cadeira Gamer colorido/StaticBody3D" unique_id=1640027385]
transform = Transform3D(1, 0, -1.7443824e-12, 0, 1, 0, 1.7443824e-12, 0, 1, -0.23745728, 12.833557, -16.38295)
shape = SubResource("BoxShape3D_q14y7")

[node name="AreaMesaCadeira" type="Area3D" parent="Cadeira Gamer colorido" unique_id=998424786]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cadeira Gamer colorido/AreaMesaCadeira" unique_id=1473762291]
transform = Transform3D(1, 0, -1.897149e-12, 0, 1, 0, 1.897149e-12, 0, 1, 0.13294601, 19.17688, -7.4943237)
shape = SubResource("BoxShape3D_y6655")
debug_color = Color(0.8783138, 0.17540574, 0.72064227, 0.41960785)

[node name="Cabeceira e Cama" parent="." unique_id=663205422 instance=ExtResource("5_ouqb2")]
transform = Transform3D(-0.6, 0, -5.2453668e-08, 0, 0.6, 0, 5.2453668e-08, 0, -0.6, -25.221365, 0, 3.3930788)

[node name="StaticBody3D" type="StaticBody3D" parent="Cabeceira e Cama" unique_id=630754630]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cabeceira e Cama/StaticBody3D" unique_id=1840841864]
transform = Transform3D(0.99999976, 0, -3.6948222e-12, 0, 0.99999976, 0, 3.6948222e-12, 0, 0.99999976, -3.3919601, 2.2543328, -0.0015878677)
shape = SubResource("BoxShape3D_ypl1b")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Cabeceira e Cama/StaticBody3D" unique_id=949673010]
transform = Transform3D(0.99999976, 0, -1.7692514e-12, 0, 0.99999976, 0, 1.7692514e-12, 0, 0.99999976, -0.018489838, 1.7436519, 7.1396623)
shape = SubResource("BoxShape3D_yvk0o")

[node name="InteracaoCama" type="Area3D" parent="Cabeceira e Cama" unique_id=1387090923]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Cabeceira e Cama/InteracaoCama" unique_id=476832803]
transform = Transform3D(0.99999976, 0, -1.4566126e-12, 0, 0.99999976, 0, 1.4566126e-12, 0, 0.99999976, -2.226921, 0, 2.6968985)
shape = SubResource("BoxShape3D_dtxsi")

[node name="Abajur" parent="." unique_id=373462257 instance=ExtResource("3_6wwey")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -25.355255, 0.3509965, -8.661339)

[node name="StaticBody3D" type="StaticBody3D" parent="Abajur" unique_id=1500543403]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Abajur/StaticBody3D" unique_id=1402768359]
transform = Transform3D(0.99999976, 0, 0, 0, 0.99999976, 0, 0, 0, 0.99999976, 0.11331558, 3.2538753, -0.04766941)
shape = SubResource("BoxShape3D_vvsrn")

[node name="Geladeira" parent="." unique_id=1036362502 instance=ExtResource("6_vmc43")]
transform = Transform3D(-0.7, 0, -1.0569706e-07, 0, 0.7, 0, 1.0569706e-07, 0, -0.7, -9.865765, 0.5810847, 22.136072)

[node name="StaticBody3D" type="StaticBody3D" parent="Geladeira" unique_id=738974082]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Geladeira/StaticBody3D" unique_id=394550767]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.26322556, 3.2511292, -0.30555725)
shape = SubResource("BoxShape3D_vmc43")
debug_color = Color(0.785974, 0.2976024, 0.78994936, 0.41960785)

[node name="Sofa" parent="." unique_id=758715556 instance=ExtResource("7_qko4a")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, -1.1479754, 1.304606, -7.141779)

[node name="StaticBody3D" type="StaticBody3D" parent="Sofa" unique_id=1196893500]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Sofa/StaticBody3D" unique_id=479164406]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0636363, 0.28219843, 0.3611927)
shape = SubResource("BoxShape3D_3gews")
debug_color = Color(0.9166872, 7.57578e-05, 0.7101964, 0.41960785)

[node name="Pia" parent="." unique_id=789624909 instance=ExtResource("8_3gews")]
transform = Transform3D(-0.6, 0, -4.5298744e-08, 0, 0.6, 0, 9.059749e-08, 0, -0.3, 0, 0, 22.736712)

[node name="StaticBody3D" type="StaticBody3D" parent="Pia" unique_id=811823227]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Pia/StaticBody3D" unique_id=1984160647]
transform = Transform3D(0.99999976, 0, -1.4210855e-14, 0, 0.99999976, 0, 5.684342e-14, 0, 0.99999976, 0.5359034, 4.1376457, -0.027046204)
shape = SubResource("BoxShape3D_trdd2")
debug_color = Color(0.86974466, 0.0005155766, 0.8522028, 0.41960785)

[node name="Lava-roupa" parent="." unique_id=2074432488 instance=ExtResource("7_yfhgd")]
transform = Transform3D(-0.5, 0, -4.371139e-08, 0, 0.5, 0, 4.371139e-08, 0, -0.5, 7.641161, 0.4745133, 22.46992)

[node name="StaticBody3D" type="StaticBody3D" parent="Lava-roupa" unique_id=1934904691]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Lava-roupa/StaticBody3D" unique_id=1104392343]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.024497986, 2.9236498, 0.12548065)
shape = SubResource("BoxShape3D_yfhgd")
debug_color = Color(0.83656895, 0.008710318, 0.93025184, 0.41960785)

[node name="Fogao" parent="." unique_id=578992450 instance=ExtResource("9_qko4a")]
transform = Transform3D(-0.6, 0, -9.059749e-08, 0, 0.6, 0, 9.059749e-08, 0, -0.6, -6.6120305, 0.8963597, 22.915817)

[node name="StaticBody3D" type="StaticBody3D" parent="Fogao" unique_id=1343842301]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Fogao/StaticBody3D" unique_id=1030284512]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.4717369, 2.5697541, 0.7279701)
shape = SubResource("BoxShape3D_l0lye")
debug_color = Color(0.8874474, 0.0953918, 0.76514703, 0.41960785)

[node name="Banco" parent="." unique_id=690478026 instance=ExtResource("8_qko4a")]
transform = Transform3D(-0.5, 0, -4.371139e-08, 0, 0.5, 0, 4.371139e-08, 0, -0.5, -1.4238937, -4.7683716e-07, 10.715519)

[node name="StaticBody3D" type="StaticBody3D" parent="Banco" unique_id=83565636]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Banco/StaticBody3D" unique_id=335457187]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.20203662, 3.5103252, -3.4619064)
shape = SubResource("BoxShape3D_qko4a")
debug_color = Color(0.8750734, 0.00043413937, 0.83804786, 0.41960785)

[node name="Armario de Roupa" parent="." unique_id=499509915 instance=ExtResource("6_xk6e0")]
transform = Transform3D(-3.278354e-08, 0, 0.75, 0, 0.75, 0, -0.75, 0, -3.278354e-08, -16.400652, 0, -9.417891)

[node name="StaticBody3D" type="StaticBody3D" parent="Armario de Roupa" unique_id=675672293]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Armario de Roupa/StaticBody3D" unique_id=829480701]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.24829102, 3.7478638, 1.4384155)
shape = SubResource("BoxShape3D_y7ql7")

[connection signal="body_entered" from="Area3D" to="." method="entered_bedroom"]
[connection signal="body_exited" from="Area3D" to="." method="exited_bedroom"]
[connection signal="body_entered" from="Cadeira Gamer colorido/AreaMesaCadeira" to="." method="_on_area_mesa_cadeira_body_entered"]
[connection signal="body_exited" from="Cadeira Gamer colorido/AreaMesaCadeira" to="." method="_on_area_mesa_cadeira_body_exited"]
[connection signal="body_entered" from="Cabeceira e Cama/InteracaoCama" to="." method="_on_interacao_cama_body_entered"]
[connection signal="body_exited" from="Cabeceira e Cama/InteracaoCama" to="." method="_on_interacao_cama_body_exited"]
